# mozc-ut-privacy-windows

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements.txt
.github/workflows/: build-release.yml  monthly-sync.yml  reusable-build-windows.yml  validate.yml
docs/: ARCHITECTURE.md  NETWORK.md
licenses/: manifest.yaml
licenses/dictionaries/: CC-BY-SA-3.0.txt  CC-BY-SA-4.0.txt  Combined-UT.txt  IPAdic.txt  JapanPost.txt  LGPL-3.0.txt
licenses/project/: BSD-3-Clause.txt
patches/merge-ut/: 0001-local-mozc-root.patch
patches/mozc/: 0001-branding.patch  0002-new-files.patch  0003-installer-launch-fix.patch
scripts/: apply_patches.py  apply_patches.sh  build_windows.ps1  bump_version.py  checkout_vendor.py  generate_checksums.ps1  generate_licenses.py  generate_release_notes.py  get_build_version.py  integrate_dictionary.py  package_portable.ps1  prepare_build.py  sign_artifacts.ps1  sync_upstream.py  troubleshoot_msi.ps1  verify_prepare.sh
scripts/templates/: install-portable.ps1  uninstall-portable.ps1
updater/: CMakeLists.txt
updater/powershell/: Install-UpdaterTask.ps1
updater/src/: checksum.cpp  checksum.h  config.cpp  config.h  github_client.cpp  github_client.h  installer.cpp  installer.h  main.cpp  util.cpp  util.h
